Consolidate bookshop detail pages and update UI terminology
- Consolidated BookshopDetailPage.tsx (slug-based) and removed duplicate BookstoreDetailPage.tsx
- Updated all internal links to use slug-based routing for SEO
- Replaced all user-facing 'bookstore' references with 'bookshop' for consistency
- Fixed react-helmet Symbol error by switching to react-helmet-async
- Added graceful error filtering for Google Sheets data (#ERROR! values)
- Updated client-side navigation to use wouter instead of window.location.href
- Added .env.example and Google Sheets setup documentation
- Changed default USE_SAMPLE_DATA to false to load from Google Sheets
- Updated server port to 3000 and added dotenv support
- Fixed Mapbox token error handling to be silent
- Updated SEO metadata across all pages to use 'bookshop' terminology

--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>IndiebookShop - Discover Independent Bookstores</title>
+    <title>IndiebookShop - Discover Independent Bookshops</title>
     <meta name="description" content="Explore unique independent bookshops across the United States and find your next literary haven with IndiebookShop's comprehensive directory.">
-    <meta property="og:title" content="IndiebookShop - Discover Independent Bookstores">
+    <meta property="og:title" content="IndiebookShop - Discover Independent Bookshops">
     <meta property="og:description" content="Explore unique independent bookshops across the United States and find your next literary haven.">
     <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
