Add Google AdSense integration
- Add AdSense verification meta tag and script to index.html
- Create AdSenseHead component to ensure script in <head> on all pages
- Add AdSense meta tag and script to SEO component
- Create reusable AdSense component for displaying ads
- Add ads.txt file for AdSense authorization
- Add comprehensive AdSense setup documentation

Publisher ID: ca-pub-4357894821158922

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,10 @@
     <meta property="og:title" content="IndiebookShop - Discover Independent Bookshops">
     <meta property="og:description" content="Explore unique independent bookshops across the United States and find your next literary haven.">
     <meta property="og:type" content="website">
+    <!-- Google AdSense Verification -->
+    <meta name="google-adsense-account" content="ca-pub-4357894821158922">
+    <!-- AdSense Script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4357894821158922" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
