--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,8 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Mapbox CSS -->
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="WXyCVg4DSjVfmskFzEGI9Q" async></script>
   </head>
   <body>
     <div id="root"></div>
