Complete form submission and Supabase integration
- Fix Supabase environment variable loading in serverless functions
- Preserve Vercel environment variables instead of overwriting with empty strings
- Add comprehensive form submission handling for bookshops and events
- Integrate Supabase for storing submissions (bookstores and events tables)
- Add SendGrid email notifications for form submissions
- Implement rate limiting for submission endpoints
- Add detailed error logging and debugging
- Create comprehensive documentation for setup and troubleshooting
- Fix conditional validation for physical location toggle in forms
- Add server-side and client-side Supabase clients
- Create events table schema and migration SQL
- Add testing scripts and verification tools

All form submissions now save to Supabase and send email notifications.

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <!-- AdSense Script -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4357894821158922" crossorigin="anonymous"></script>
     <!-- Ahrefs Analytics -->
-    <script src="https://analytics.ahrefs.com/analytics.js" data-key="WXyCVg4DSjVfmskFzEGI9Q" async></script>
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="WXyCVg4DSjVfmskFzEGl9Q" async></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
