Add Google Analytics (gtag.js) tracking
- Add Google Analytics tag to index.html head section
- Tracking ID: G-KK1N43FCQZ
- Placed early in head for proper tracking

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KK1N43FCQZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-KK1N43FCQZ');
+    </script>
+    
     <title>IndiebookShop - Discover Independent Bookshops</title>
     <meta name="description" content="Explore unique independent bookshops across the United States and find your next literary haven with IndiebookShop's comprehensive directory.">
     <meta property="og:title" content="IndiebookShop - Discover Independent Bookshops">
