--- a/client/index.html
+++ b/client/index.html
@@ -43,6 +43,10 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Mapbox CSS -->
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
+    
+    <!-- Prefetch API endpoints for homepage below-the-fold content -->
+    <link rel="prefetch" href="/api/bookstores" as="fetch" crossorigin="anonymous" />
+    <link rel="prefetch" href="/api/features" as="fetch" crossorigin="anonymous" />
   </head>
   <body>
     <div id="root"></div>
