fix: Implement SEO warning fixes and hotfix React import
- Warning #11: Add server-side location variant redirects
  - Implemented findBookshopBySlugVariations in redirectMiddleware
  - Added location variant redirect logic to Edge Middleware
  - Handles /bookshop/name-city → /bookshop/name redirects

- Warning #22: Optimize CSS file size with lazy loading
  - Created mapboxCssLoader utility for dynamic CSS loading
  - Removed global Mapbox CSS from index.html
  - All map components now lazy load CSS (~8-10 KB reduction)

- Warning #4: Optimize redirect chains
  - Verified and documented redirect configuration
  - Added documentation for Vercel dashboard configuration

- Hotfix: Fix React import in mapboxCssLoader
  - Changed from default import to named imports
  - Fixes 'Cannot read properties of undefined' error

- Documentation: Added comprehensive docs for all fixes
- Testing: Added test script to verify all changes

--- a/client/index.html
+++ b/client/index.html
@@ -41,8 +41,7 @@
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <!-- Mapbox CSS -->
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
+    <!-- Mapbox CSS is now lazy-loaded when maps are rendered (see client/src/lib/mapboxCssLoader.ts) -->
     
     <!-- Prefetch API endpoints for homepage below-the-fold content -->
     <link rel="prefetch" href="/api/bookstores" as="fetch" crossorigin="anonymous" />
